<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_detail"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:orientation="vertical"
    tools:context="com.movie.movie.DetailActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="5dp">
        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"></android.support.v7.widget.Toolbar>
        <LinearLayout
            android:id="@+id/linearLayoutParent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="8dp"
            android:weightSum="1">
            <ImageView
                android:id="@+id/imageViewDetail"
                android:layout_width="200dp"
                android:layout_height="300dp"
                android:src="@color/colorPrimary" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/titleMovieTxt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/title"
                    android:padding="10dp"
                    android:textSize="20sp"
                    android:textStyle="bold" />
                <TextView
                    android:id="@+id/dateReleaseTxt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/ic_action_movie"
                    android:padding="10dp"
                    android:textStyle="normal" />
                <TextView
                    android:id="@+id/voteMovieTxt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/ic_action_like"
                    android:padding="10dp"
                    android:textStyle="normal" />
                <Button
                    android:id="@+id/btnPreference"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="?attr/selectableItemBackground"
                    android:drawableLeft="@drawable/ic_action_star_10"
                    android:hint="@string/add_fav"
                    android:padding="10dp" />

            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/plotAvailable"
                android:padding="10dp"
                android:textSize="17sp"
                android:textStyle="bold" />
            <TextView
                android:id="@+id/plotMovieTxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/plot"
                android:padding="10dp"
                android:textStyle="italic" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/trailer"
                android:padding="10dp"
                android:textSize="17sp"
                android:textStyle="bold" />
            <android.support.v7.widget.RecyclerView
                android:id="@+id/recycler_trailer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:padding="10dp"></android.support.v7.widget.RecyclerView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/review"
                android:padding="10dp"
                android:textSize="17sp"
                android:textStyle="bold" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/recycler_review"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"></android.support.v7.widget.RecyclerView>

            <TextView
                android:id="@+id/textNoReview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/noReviewAt"
                android:padding="10dp"
                android:textSize="17sp"
                android:textStyle="bold"
                android:visibility="gone" />
        </LinearLayout>
    </LinearLayout>
</android.support.v4.widget.NestedScrollView>
